# server/routes.go
@@ -8,10 +8,10 @@ import (
 // RegisterRoutes registers all the routes for this api server.
 
 func (s *Server) RegisterRoutes(e *echo.Echo) {
-	e.POST("/users", s.RegisterAccount)
-	e.POST("/auth/login", s.LoginAccount)
 
-	authenticated := e.Group("/game")
-	authenticated.Use(s.JwtAuthMiddleware)
-	authenticated.POST("/matchmaking", s.Matchmaking)
+	e.POST("/users", s.RegisterUserAccount)
+
+	e.POST("/games", s.Matchmaking, s.AuthApiKeyMiddleware)
+
+	e.POST("/auth/login", s.GetApiKeyTryRenew)
 }
